# Lettrine

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  nbt.hpp  staticman.yml
DeBry/1072056536/img/: Thumbs.db
ImagesTests/1072056536/metadata/: 1072056536.json  1072056536.xml
ShapeDetector/: main.cpp
Sources/: Extractor.cpp  ThreadConductor.cpp  extractor.cpp  main.cpp
Sources/Headers/: Extractor.hpp  ThreadConductor.hpp
Sources/bloblib/: BlobContour.cpp  ComponentLabeling.cpp  blob.cpp  blob.h
UnitTests/: CMakeLists.txt  DummyTest.cpp
archivist/: archivist.p6
demo/: demo.py  style.css
docs/: README.md  _config.yml  index.html  index.md  staticman.yml
docs/_data/: navigation.yml
docs/_docs/: 01-comment-ca-marche.md  01-fonctionnement.md  02-structure.md  03-installation.md  04-histoire.md  04-license.md  05-contributions.md
docs/_includes/: comments.html
docs/_pages/: home.md  presentation.md
image_extractor/: extractor.cpp
sources/: extractor.cpp  main.cpp
sources/bloblib/: BlobOperators.cpp
